--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
 /target
+/lib
 /classes
 /checkouts
 pom.xml
-pom.xml.asc
 *.jar
 *.class
-/.lein-*
-/.nrepl-port
-.hgignore
-.hg/
+.lein-deps-sum
+.lein-failures
+.lein-plugins
